# level2-3-nlp-finalproject-nlp-04

./: .gitignore  README.md  app.py  auth.py  config.py  database.py  main.py  models.py  privacy_policy.txt  pyproject.toml  requirements.txt  rule_based_algorithm.ipynb  rule_based_algorithm.py
(제거)etc/: __init__.py
(제거)etc/utils/: util.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
01-vectordb/: vectordb.py  vectordb_with_multiquery.py
02-langchain_prompt/: langchain_demo.py  maxseats_langchain_demo.py  simplechain.py
02-langchain_prompt/3_chain/: resume_prompt.txt
03-faiss/: faiss_basic.py  faiss_org.py
FAISS_INDEX_TAG/: index.faiss  index.pkl
back/: README.md  backend.py  config.py  file_manager.py  history.py  kakao.py  kakao_auth.py  main.py  mongo_test.py  mongodb.py  records.py  share_var.py  streamlit_control.py  user.py  user_authorization.py  users.py
back/fastapi_oauth_client/: __init__.py  exceptions.py  oauth_client.py
back/managers/: account_models.py  db_operators.py  file_manager.py  history_manager.py  mongo_config.py  records_manager.py
etc/: __init__.py
etc/css/: 1_user.css  5_user_report.css
front/: 0_introduction.py  1_home.py  gene_question_2chain_ver.py  introduction.py  question_list.py  start.py
pages/: 1_home.py  1_privacy_policy.py  2_user.py  3_gene_question.py  3_gene_question_no_resume.py  4_interview.py  4_show_questions_hint.py
src/: chat.py  gene_question_2chain_ver.py  generate_question.py  generate_report.py  make_faiss_index.py  new_rule_based.py  rule_based.py  rule_based_algorithm.py  semantic_search.py  util.py
templates/: main_page.html
(+47 files in other folders)
