[tool.poetry]
name = "hello-jobits"
version = "0.1.0"
description = ""
authors = ["kooqooo <koo9717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.13.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
jinja2 = "^3.1.3"
streamlit = "^1.32.0"
torch = "^2.2.1"
transformers = "^4.38.2"
langchain = "^0.1.11"
langchain-community = "^0.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
