[tool.black]
line-length = 120

[tool.poetry]
name = "hello-jobits"
version = "0.1.0"
description = ""
authors = ["kooqooo <koo9717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.13.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
fastapi = {extras = ["uvicorn"], version = "^0.110.0"}
uvicorn = "^0.28.0"
jinja2 = "^3.1.3"
streamlit = "^1.32.0"
transformers = "^4.38.2"
langchain = "^0.1.11"
langchain-community = "^0.0.27"
jupyter = "^1.0.0"
streamlit-extras = "^0.4.0"
loguru = "^0.7.2"
plotly = "^5.20.0"
utils = "^1.0.2"
chromadb = "^0.4.24"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.28"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
pyjwt = "^2.8.0"
pycryptodome = "^3.20.0"
aiofiles = "^23.2.1"
tiktoken = "^0.6.0"
pymongo = "^4.6.2"
motor = "^3.3.2"
pypdf = "^4.1.0"
pysqlite3-binary = "^0.5.2.post3"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.5.1"
cryptography = "^42.0.5"
faiss-gpu = "^1.7.2"
cohere = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
